Fix whitespace of headings on Overview project info bar

--- a/templates/html/static/css/style.css
+++ b/templates/html/static/css/style.css
@@ -146,6 +146,8 @@ h3 {
 #buildinfo h3 {
     font-size: 1em;
     margin:0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #buildinfo p {
